Changelog for 1.4 Series
Forthcoming

* scripts/* files moved to make inheritance possible (Chris T)
* PostgreSQL contrib dependencies removed, now requre Pg 8.4 (Chris T)
* Performance enhancements on menu routines (Chris T and Steven M)
* Projects and Departments can now have subprojects and Departments (Chris T)
* Project/department mechanism generalized to support funds, etc (Chris T)
* Removed the Config::Std dependency and moved to Config::General (Chris T)
* Merged in transaction import add-on for 1.4, also for other csv's (Chirs T)

Changelog for 1.3 Series
Initial Release:  Monday, Oct 12 2011
Supported Presently

Changelog for 1.3.12
* Corrected processing of <?lsmb tags in order/invoice numbers (Chris T)
* Corrected handling of accounts in dropdowns where () are present (Chris T)
* Corrected erroneous log messages from debugging 1.3.11 (Chris T)
* Autocomplete ajaxselect now work (degraded) without Javascript (Chris T)
* Autocomplete ajaxselect now accept full entry without waiting (Chris T)

Changelog for 1.3.11
* Fixed outstanding report for payment reversal and partial payments (Chris T)
* Fixed handling of non-existing roles in menu grants (Chris T)
* Added reverse_bank_recs setting for those that want to
  do recs from bank perspective (Chris T)
* Added "bank register mode" for account transaction lists (Chris T)
* Fixed join projection issue in draft search routine (Chris T)
* Fixed prepare-database.sh for Pg 9.1 (Erik H)
* Fixed Customer/vendor selection for dropdowns (Chris T)
* Fixed some HASH() entries in CSV templates (Chris T)
* Removed unnecessary shebang lines in scripts/* files (Robert C)
* Fixed GL recurring transaction not posting (Chris T)
* Improved error handling when extensions/contrib scripts not found (Chris T)
* Fixed multicurrency handling in bulk payment interface (Chris T and Erik H)
* Corrected a number of number parsing/i18n issues (Herman V)
* Corrected pos_cashier inadequate permissions (Chris T)